[tool.poetry]
name = "coach-planner"
version = "0.1.0"
description = ""
authors = ["Baptiste Maingret <baptiste.maingret@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
